# ADsum

./: .gitignore  README.md  pyproject.toml
adsum/: __init__.py  cli.py  config.py  logging.py
adsum/core/audio/: __init__.py  base.py  devices.py  factory.py  ffmpeg_backend.py  sounddevice_backend.py  writers.py
adsum/core/pipeline/: orchestrator.py
adsum/data/: models.py  storage.py
adsum/services/: __init__.py  factory.py
adsum/services/notes/: __init__.py  base.py  dummy.py  openai_notes.py
adsum/services/transcription/: __init__.py  base.py  dummy.py  openai_client.py
adsum/ui/: __init__.py  console.py  window.py
adsum/utils/: audio.py
tests/: test_audio_devices.py  test_audio_factory.py  test_audio_utils.py  test_cli.py  test_config.py  test_ffmpeg_backend.py  test_openai_transcription_service.py  test_orchestrator.py  test_storage.py  test_ui_window.py
